# 22-5-team8-server

./: .env.local  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  settings.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml
app/: api.py  main.py
app/auth/: errors.py  oauth.py  service.py  utils.py  views.py
app/country/: models.py
app/genre/: models.py
app/movie/: errors.py  models.py  repository.py  service.py  views.py
app/movie/dto/: requests.py  responses.py
app/participant/: models.py
app/review/: models.py
app/user/: errors.py  models.py  repository.py  service.py  views.py
app/user/dto/: requests.py  responses.py
auth/: settings.py  utils.py
common/: errors.py
database/: settings.py
database/alembic/versions/: 2024_12_29_0310-4623018d14af_test1.py  2024_12_30_0332-031f29827a0d_test2.py  2024_12_30_0336-7cdb3b6792dd_test3.py  2024_12_31_0136-5c5b3d4571f6_test.py  2025_01_02_0323-2bb6b92c4269_test.py  2025_01_02_0331-f8a6d9048325_test3.py
watchapedia/: api.py  main.py  settings.py
watchapedia/app/analysis/: models.py  repository.py  service.py  views.py
watchapedia/app/auth/: errors.py  oauth.py  service.py  settings.py  utils.py  views.py
watchapedia/app/calendar/: repository.py  service.py  views.py
watchapedia/app/collection/: errors.py  models.py  repository.py  service.py  views.py
watchapedia/app/collection_comment/: models.py  repository.py  service.py  views.py
watchapedia/app/comment/: errors.py  models.py  repository.py  service.py  views.py
watchapedia/auth/: settings.py  utils.py
watchapedia/common/: errors.py
watchapedia/database/: __init__.py  common.py  connection.py  settings.py
(+94 files in other folders)
