[tool.poetry]
name = "22-5-team8-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.0"
uvicorn = "^0.34.0"
pymysql = "^1.1.1"
alembic = "^1.14.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
bcrypt = "4.0.1"
authlib = "^1.4.0"
httpx = "^0.28.1"
starlette = "0.41.0"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
